# SampleCode

./: CMakeLists.txt  README.md
blender/: modify-mesh-texspace.py  oldbump2newbump.py
c/: CMakeLists.txt  fork.c  hello.c
c/funwithsharedlibs/: CMakeLists.txt  bttools.h  hello.c  myfirstlib.c  mylibs.h  mysecondlib.c  mythirdlib.c
